--- a/app/src/main/res/values-large/dimens.xml
+++ b/app/src/main/res/values-large/dimens.xml
@@ -44,6 +44,9 @@
     <dimen name="splash_image_size">400dp</dimen>
     <dimen name="splash_image_size_land">400dp</dimen>
 
+    <dimen name="account_image_size">350dp</dimen>
+    <dimen name="account_image_size_land">180dp</dimen>
+
     <!-- Button -->
     <dimen name="button_radius">25dp</dimen>
     <dimen name="padding_button">25dp</dimen>
@@ -53,6 +56,10 @@
     <dimen name="margin_bottom_logo_land">24dp</dimen>
     <dimen name="margin_top_slogan">50dp</dimen>
     <dimen name="margin_top_slogan_land">24dp</dimen>
+
+    <dimen name="padding_top_title_large">50dp</dimen>
+    <dimen name="padding_top_title_medium">35dp</dimen>
+    <dimen name="padding_top_title_min">20dp</dimen>
 
     <!-- round logo -->
     <dimen name="round_logo_width_external">200dp</dimen>
