--- a/app/src/main/res/values-normal/dimens.xml
+++ b/app/src/main/res/values-normal/dimens.xml
@@ -43,6 +43,9 @@
     <dimen name="splash_image_size">250dp</dimen>
     <dimen name="splash_image_size_land">230dp</dimen>
 
+    <dimen name="account_image_size">180dp</dimen>
+    <dimen name="account_image_size_land">180dp</dimen>
+
 
     <!-- Button -->
     <dimen name="button_radius">20dp</dimen>
@@ -53,6 +56,10 @@
     <dimen name="margin_bottom_logo_land">2dp</dimen>
     <dimen name="margin_top_slogan">50dp</dimen>
     <dimen name="margin_top_slogan_land">2dp</dimen>
+
+    <dimen name="padding_top_title_large">30dp</dimen>
+    <dimen name="padding_top_title_medium">20dp</dimen>
+    <dimen name="padding_top_title_min">10dp</dimen>
 
     <!-- round logo -->
     <dimen name="round_logo_width_external">100dp</dimen>
