--- a/app/src/main/res/layout-land/activity_account.xml
+++ b/app/src/main/res/layout-land/activity_account.xml
@@ -110,21 +110,30 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textview_accout_name"
+                        android:id="@+id/textview_account_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:gravity="center_horizontal"
                         android:text=""
                         android:textAlignment="center"
-                        android:textSize="@dimen/text_size_medium" />
+                        android:textSize="@dimen/text_size_small" />
 
                 </TableRow>
-
+                <TableRow
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/grey">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="1dp"
+                        android:visibility="invisible"/>
+                </TableRow>
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    >
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -137,15 +146,25 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textview_accout_surname"
+                        android:id="@+id/textview_account_surname"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:gravity="center_horizontal"
                         android:text=""
                         android:textAlignment="center"
-                        android:textSize="@dimen/text_size_medium" />
+                        android:textSize="@dimen/text_size_small" />
 
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/grey">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="1dp"
+                        android:visibility="invisible"/>
                 </TableRow>
 
                 <TableRow
@@ -164,17 +183,25 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textview_accout_username"
+                        android:id="@+id/textview_account_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:gravity="center_horizontal"
                         android:text=""
                         android:textAlignment="center"
-                        android:textSize="@dimen/text_size_medium" />
+                        android:textSize="@dimen/text_size_small" />
 
                 </TableRow>
-
+                <TableRow
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/grey">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="1dp"
+                        android:visibility="invisible"/>
+                </TableRow>
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -191,17 +218,25 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textview_accout_mail"
+                        android:id="@+id/textview_account_mail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:gravity="center_horizontal"
                         android:text=""
                         android:textAlignment="center"
-                        android:textSize="@dimen/text_size_medium" />
+                        android:textSize="@dimen/text_size_small" />
 
                 </TableRow>
-
+                <TableRow
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/grey">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="1dp"
+                        android:visibility="invisible"/>
+                </TableRow>
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -218,17 +253,25 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textview_accout_location"
+                        android:id="@+id/textview_account_location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:gravity="center_horizontal"
                         android:text=""
                         android:textAlignment="center"
-                        android:textSize="@dimen/text_size_medium" />
+                        android:textSize="@dimen/text_size_small" />
 
                 </TableRow>
-
+                <TableRow
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/grey">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="1dp"
+                        android:visibility="invisible"/>
+                </TableRow>
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -245,14 +288,14 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textview_accout_date"
+                        android:id="@+id/textview_account_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:gravity="center_horizontal"
                         android:text=""
                         android:textAlignment="center"
-                        android:textSize="@dimen/text_size_medium" />
+                        android:textSize="@dimen/text_size_small" />
 
                 </TableRow>
 
@@ -263,7 +306,7 @@
                     android:orientation="horizontal">
 
                     <com.google.android.material.button.MaterialButton
-                        android:id="@+id/button_account_editdata"
+                        android:id="@+id/btn_account_editdata"
                         style="@style/button_secondary"
                         android:layout_width="0dp"
 
@@ -293,6 +336,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/textview_account_change_password"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -303,6 +347,15 @@
                         android:textSize="@dimen/text_size_medium"
                         android:fontFamily="sans-serif"
                         />
+                </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingBottom="@dimen/padding_top_title_large"
+                    android:paddingTop="@dimen/padding_top_title_large"
+                    >
                 </TableRow>
 
 
