--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -28,6 +28,7 @@
                     android:background="@color/red">
 
                     <TextView
+                        android:id="@+id/textview_account_add_new_image"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -102,7 +103,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
                         android:gravity="center_horizontal"
                         android:text="@string/account_name"
                         android:textAlignment="center"
@@ -113,7 +114,7 @@
                         android:id="@+id/textview_account_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3"
+                        android:layout_weight="100"
                         android:gravity="center_horizontal"
                         android:text=""
                         android:textAlignment="center"
@@ -138,7 +139,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
                         android:gravity="center_horizontal"
                         android:text="@string/account_surname"
                         android:textAlignment="center"
@@ -149,7 +150,7 @@
                         android:id="@+id/textview_account_surname"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3"
+                        android:layout_weight="100"
                         android:gravity="center_horizontal"
                         android:text=""
                         android:textAlignment="center"
@@ -175,7 +176,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
                         android:gravity="center_horizontal"
                         android:text="@string/account_username"
                         android:textAlignment="center"
@@ -186,7 +187,7 @@
                         android:id="@+id/textview_account_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3"
+                        android:layout_weight="100"
                         android:gravity="center_horizontal"
                         android:text=""
                         android:textAlignment="center"
@@ -210,7 +211,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
                         android:gravity="center_horizontal"
                         android:text="@string/account_mail"
                         android:textAlignment="center"
@@ -221,7 +222,7 @@
                         android:id="@+id/textview_account_mail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3"
+                        android:layout_weight="100"
                         android:gravity="center_horizontal"
                         android:text=""
                         android:textAlignment="center"
@@ -245,7 +246,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
                         android:gravity="center_horizontal"
                         android:text="@string/account_location"
                         android:textAlignment="center"
@@ -256,7 +257,7 @@
                         android:id="@+id/textview_account_location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3"
+                        android:layout_weight="100"
                         android:gravity="center_horizontal"
                         android:text=""
                         android:textAlignment="center"
@@ -280,7 +281,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
                         android:gravity="center_horizontal"
                         android:text="@string/account_date"
                         android:textAlignment="center"
@@ -291,7 +292,7 @@
                         android:id="@+id/textview_account_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3"
+                        android:layout_weight="100"
                         android:gravity="center_horizontal"
                         android:text=""
                         android:textAlignment="center"
@@ -307,12 +308,12 @@
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btn_account_editdata"
-                        style="@style/button_secondary"
+                        style="@style/main_button_style"
                         android:layout_width="0dp"
 
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/padding_top_title_medium"
-                        android:layout_marginVertical="@dimen/padding_top_title_large"
+                        android:layout_marginTop="@dimen/padding_top_title_medium"
+                        android:layout_marginBottom="@dimen/padding_top_title_min"
 
                         android:gravity="center"
 
@@ -329,25 +330,57 @@
                 </TableRow>
 
 
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textview_account_change_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:paddingTop="@dimen/padding_top_title_min"
-                    android:paddingBottom="@dimen/padding_top_title_min"
-                    android:text="@string/change_password"
-                    android:textAlignment="center"
-                    android:textSize="@dimen/text_size_medium"
-                    android:fontFamily="sans-serif"
-                    />
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn_account_cancel"
+                        style="@style/button_secondary"
+                        android:layout_width="0dp"
+
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/padding_top_title_min"
+                        android:layout_marginTop="@dimen/padding_top_title_min"
+
+                        android:gravity="center"
+
+                        android:text="@string/back"
+                        app:cornerRadius="@dimen/button_radius"
+
+                        app:layout_constraintBottom_toBottomOf="parent"
+
+                        app:layout_constraintHorizontal_bias=".5"
+
+
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintVertical_bias=".1" />
                 </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textview_account_change_password"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:paddingTop="@dimen/padding_top_title_min"
+                        android:paddingBottom="@dimen/padding_top_title_min"
+                        android:text="@string/change_password"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/text_size_medium"
+                        android:fontFamily="sans-serif"
+                        />
+                </TableRow>
+
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
