modifiche per cambio password

--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
 
             android:id="@+id/fragment_password_changepassword"
-            class="com.poma.restaurant.login.Fragment_Password"
+            class="com.poma.restaurant.account.Fragment_Password"
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
