--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -9,112 +9,129 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
-
-
 
             <TextView
                 android:id="@+id/textview_alert_message_loginform"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:visibility="invisible"
+
 
                 android:textAlignment="center"
                 android:textColor="@color/red"
                 android:textSize="@dimen/text_size_medium"
                 android:textStyle="bold"
+
+                android:visibility="invisible"
                 app:layout_constraintBottom_toTopOf="@+id/login_confirm"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/password_loginform"
-                app:layout_constraintVertical_bias=".3"
-                app:layout_constraintWidth_percent=".8"
-                tools:ignore="MissingConstraints"
-
-                />
+                app:layout_constraintTop_toBottomOf="@id/textfield_password_loginform"
+                app:layout_constraintVertical_bias="0.274"
+                app:layout_constraintWidth_percent=".8" />
 
             <EditText
                 android:id="@+id/username_loginform"
 
                 android:layout_width="0dp"
+                app:layout_constraintWidth_percent=".8"
                 android:layout_height="wrap_content"
-                android:hint="@string/username"
-                android:paddingLeft="20dp"
 
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:textSize="@dimen/text_size_medium"
-                android:visibility="gone"
-
-                app:layout_constraintBottom_toTopOf="@+id/password_loginform"
+                app:layout_constraintBottom_toTopOf="@+id/textfield_password_loginform"
                 app:layout_constraintEnd_toEndOf="parent"
-
-                app:layout_constraintHorizontal_bias=".3"
-
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias=".9"
 
-                app:layout_constraintWidth_percent=".8" />
+                app:layout_constraintVertical_bias=".9"
+                app:layout_constraintHorizontal_bias=".3"
+                android:visibility="gone"
+
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+
+                android:hint="@string/username"/>
+
 
             <EditText
                 android:id="@+id/email_loginform"
 
                 android:layout_width="0dp"
-
+                app:layout_constraintWidth_percent=".8"
                 android:layout_height="wrap_content"
-                android:hint="@string/email"
+
                 android:textSize="@dimen/text_size_medium"
-                android:paddingLeft="20dp"
 
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-
-                app:layout_constraintBottom_toTopOf="@+id/password_loginform"
+                app:layout_constraintBottom_toTopOf="@+id/textfield_password_loginform"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias=".6"
-                app:layout_constraintWidth_percent=".8" />
 
-            <EditText
-                android:id="@+id/password_loginform"
-                android:layout_width="0dp"
-
-                android:layout_height="wrap_content"
-                android:hint="@string/password"
-                android:inputType="textPassword"
+                app:layout_constraintVertical_bias=".9"
+                app:layout_constraintHorizontal_bias=".3"
 
                 android:paddingLeft="20dp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:selectAllOnFocus="true"
+
+                android:hint="@string/email"/>
+
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="0dp"
+                android:id="@+id/textfield_password_loginform"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:boxBackgroundColor="@color/white"
 
                 android:textSize="@dimen/text_size_medium"
+
                 app:layout_constraintBottom_toBottomOf="parent"
-
                 app:layout_constraintEnd_toEndOf="parent"
-
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
 
                 app:layout_constraintVertical_bias=".3"
-                app:layout_constraintWidth_percent=".8" />
+                app:layout_constraintHorizontal_bias=".3"
+
+
+
+                app:layout_constraintWidth_percent=".8"
+
+
+
+                app:passwordToggleEnabled="true">
+
+                <EditText
+                    android:id="@+id/password_loginform"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:autofillHints=""
+                    android:textSize="@dimen/text_size_medium"
+                    android:hint="@string/password"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPassword"
+                    android:selectAllOnFocus="true" />
+            </com.google.android.material.textfield.TextInputLayout>
+
 
             <TextView
                 android:id="@+id/text_register_loginform"
+                android:visibility="invisible"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
                 android:text="@string/register"
+                android:fontFamily="sans-serif"
                 android:textSize="@dimen/text_size_medium"
-                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias=".5"
@@ -123,50 +140,54 @@
                 app:layout_constraintTop_toBottomOf="@+id/button_cancel_loginform"
                 app:layout_constraintVertical_bias=".2" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/login_confirm"
-                style="@style/main_button_style"
-                android:layout_width="0dp"
 
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/main_button_style"
+                app:cornerRadius="@dimen/button_radius"
+
+
+                android:id="@+id/login_confirm"
+
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
                 android:text="@string/login"
 
-                app:cornerRadius="@dimen/button_radius"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias=".5"
-
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/password_loginform"
+                app:layout_constraintTop_toBottomOf="@+id/textfield_password_loginform"
+                app:layout_constraintVertical_bias="0.3"
+                app:layout_constraintWidth_percent=".8"
 
-                app:layout_constraintVertical_bias=".4"
-                app:layout_constraintWidth_percent=".8" />
+                />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/button_cancel_loginform"
                 style="@style/button_secondary"
+                app:cornerRadius="@dimen/button_radius"
+
+                android:id="@+id/button_cancel_loginform"
+
                 android:layout_width="0dp"
+                app:layout_constraintWidth_percent=".8"
 
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
 
-
-                android:layout_marginBottom="32dp"
-                android:text="@string/cancel"
-
-                app:cornerRadius="@dimen/button_radius"
-                app:layout_constraintBottom_toBottomOf="parent"
-
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias=".5"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/login_confirm"
+
                 app:layout_constraintVertical_bias=".1"
-                app:layout_constraintWidth_percent=".8" />
+                app:layout_constraintHorizontal_bias=".5"
+
+                android:text="@string/cancel"
+                />
 
 
-            />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
