--- a/app/src/main/res/layout/header_menu_user.xml
+++ b/app/src/main/res/layout/header_menu_user.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="@dimen/height_logo_menu"
     android:background="@color/red"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -16,20 +16,41 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="10dp">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:cardCornerRadius="100dp">
+            android:layout_width="@dimen/round_logo_width_external"
+            android:layout_height="@dimen/round_logo_width_external"
+            app:cardCornerRadius="@dimen/round_logo_width_external">
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@mipmap/logo_launcher" />
         </androidx.cardview.widget.CardView>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/header_user_title"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/height_text"
+                android:paddingTop="10dp"
+                android:paddingLeft="10dp"
+                android:text="@string/app_name"
+                android:textSize="@dimen/padding_top_title_medium"
+                android:fontFamily="sans-serif"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                 />
+
+        </LinearLayout>
 
 
     </LinearLayout>
+    
+
 
 </LinearLayout>
