--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -63,5 +63,6 @@
     <!-- Logo menu-->
     <dimen name="height_logo_menu">200dp</dimen>
     <dimen name="height_text">40dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 
 </resources>
