--- a/app/src/main/res/layout/card_notification_normal.xml
+++ b/app/src/main/res/layout/card_notification_normal.xml
@@ -1,6 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="8dp"
+    app:cardMaxElevation="10dp"
+    app:cardPreventCornerOverlap="true"
+    app:cardUseCompatPadding="true"
+    android:id="@+id/cardview_notification"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!--
+        In the above cardview widget
+        cardelevation property will give elevation to your card view
+        card corner radius will provide radius to your card view
+        card background color will give background color to your card view
+        card max elevation will give the cardview maximum elevation
+        card prevent corner overlap will add padding to CardView on v20 and
+        before to prevent intersections between the Card content and rounded corners.
+        card use compact padding will add padding in API v21+ as well to have the same
+        measurements with previous versions.
+    -->
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <!--ImageVIew to display our Course Image-->
+        <ImageView
+            android:id="@+id/icon_notification"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_margin="10dp"
+            android:contentDescription="@string/app_name"
+            android:padding="5dp"
+            android:src="@drawable/common_google_signin_btn_icon_dark_normal" />
+
+        <!--Text View to display Course Name-->
+        <TextView
+            android:id="@+id/textview_notification_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@id/icon_notification"
+            android:text="titolo"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_medium"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/icon_new_notification"
+            android:src="@drawable/ic_baseline_fiber_new_24"
+            app:tint="@color/blue_link"
+            android:layout_toEndOf="@id/icon_notification"
+            android:layout_marginStart="20dp"
+            >
+
+        </ImageView>
+
+        <!--Text VIew to display COurse Rating-->
+        <!--Image used in present in drawable folder-->
+        <TextView
+            android:id="@+id/textview_notification_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textview_notification_title"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="center"
+            android:layout_toEndOf="@id/icon_notification"
+            android:textSize="@dimen/text_size_small"
+            android:drawablePadding="2dp"
+            android:text="Descrione fabdfffddffddfffdfddddddddddddddddf
+            fffffffffffffff"
+             />
+
+        <TextView
+            android:id="@+id/textview_notification_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textview_notification_description"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="10dp"
+            android:gravity="right"
+            android:layout_toEndOf="@id/icon_notification"
+            android:textSize="@dimen/text_size_micro"
+            android:drawablePadding="2dp"
+            android:text="Date"
+            />
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
